cmake_minimum_required(VERSION 3.13)
project(ccb-assembler CXX)
add_subdirectory(thirdparty)
add_executable(ccb-assembler)
file(GLOB_RECURSE CCB_ASSEMBLER_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/sources/*.cpp")
target_sources(ccb-assembler PRIVATE ${CCB_ASSEMBLER_SOURCES})
target_link_libraries(ccb-assembler PRIVATE cxxopt termcolor FileWatcher)
target_include_directories(ccb-assembler PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include/")
set_target_properties(ccb-assembler PROPERTIES CXX_STANDARD 11 CXX_STANDARD_REQUIRED ON)